<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfileFragment">

    <ImageView
        android:id="@+id/userProfileImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <RatingBar
        android:id="@+id/userRatingBar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:progressTint="@android:color/holo_orange_light"
        app:layout_constraintBottom_toBottomOf="@+id/userProfileImage"
        app:layout_constraintStart_toEndOf="@+id/userProfileImage"
        app:layout_constraintTop_toBottomOf="@id/myProfileName" />

    <Button
        android:id="@+id/btnContact"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/btnContact"
        app:layout_constraintBottom_toBottomOf="@+id/userRatingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userProfileImage"
        app:layout_constraintWidth_percent=".35" />

    <TextView
        android:id="@+id/userProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="John Smith"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/userRatingBar"
        app:layout_constraintEnd_toEndOf="@+id/userRatingBar"
        app:layout_constraintStart_toEndOf="@+id/userProfileImage"
        app:layout_constraintTop_toTopOf="@id/userProfileImage" />

    <TextView
        android:id="@+id/userProfileBio"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/exampleBio"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/JobsCompletedText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/userProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/userProfileImage" />

    <TextView
        android:id="@+id/JobsCompletedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/strJobsCompleted"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/userViewSwitcherCompletedJobs"
        app:layout_constraintStart_toStartOf="@+id/userProfileBio"
        app:layout_constraintTop_toBottomOf="@id/userProfileBio" />

    <ViewSwitcher
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/userViewSwitcherCompletedJobs"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/JobsCompletedText"
        >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/userCompletedJobsRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            tools:listitem="@layout/recycler_view_item_1" />

        <TextView android:id="@+id/userTxtEmpty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/completed_jobs_empty"
            android:gravity="center"
            android:visibility="gone"
            />

    </ViewSwitcher>


</android.support.constraint.ConstraintLayout>